Clean up some compiler warnings